test/libhyperion/syntaxTests/functionTypes/delete_function_type.hyp
contract C {
    function(uint) external returns (uint) x;
    function(uint) internal returns (uint) y;
    function f() public {
        delete x;
        function(uint) internal returns (uint) a = y;
        delete a;
        delete y;
        function() internal c = f;
        delete c;
        function(uint) internal returns (uint) g;
        delete g;
    }
}
// ----
// TypeError 4888: (17-57): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
